<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/dp_32"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_a_pro"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_text"
        android:gravity="center"
        android:textSize="@dimen/sp_12"
        android:layout_marginTop="@dimen/dp_20" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:background="@drawable/bg_green"
        android:gravity="center"
        android:text="@string/btn_email"
        android:textAllCaps="true"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:background="@drawable/bg_green"
        android:gravity="center"
        android:text="@string/btn_text_msg"
        android:textAllCaps="true"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvContacts"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:background="@drawable/bg_green"
        android:gravity="center"
        android:text="@string/btn_contacts"
        android:textAllCaps="true"
        android:textColor="@color/white" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:hint="PRO'S NAME"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/sp_14" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/sp_14" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edtNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:inputType="phone"
        android:hint="PHONE NUMBER"
        android:maxLength="12"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tvSend"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:background="@drawable/bg_green"
        android:gravity="center"
        android:text="Send"
        android:visibility="gone"
        tools:visibility="visible"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</LinearLayout>