<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".account.activity.SignInActivity">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        android:id="@+id/toolbar_header"
        layout="@layout/layout_toolbar"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.TextInputEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_50"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/sp_14"
        android:theme="@style/EditTextTheme"
        app:layout_constraintTop_toBottomOf="@id/toolbar_header" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_12"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/sp_14"
        android:theme="@style/EditTextTheme"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_18"
        android:background="@drawable/bg_transparent"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:gravity="center_horizontal"
        android:text="@string/sign_up_text"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvSignIn" />


    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:gravity="center_horizontal"
        android:text="@string/forgot_pswd"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvSignUp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/tvSignIn"
        app:layout_constraintEnd_toEndOf="@id/tvSignIn"
        app:layout_constraintTop_toTopOf="@id/tvSignIn"
        app:layout_constraintBottom_toBottomOf="@id/tvSignIn"/>
</android.support.constraint.ConstraintLayout>