<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/ivPic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/dp_32"
        android:layout_height="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintTop_toTopOf="@id/ivPic"/>


    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:src="@drawable/photo_button"
        app:layout_constraintTop_toBottomOf="@id/ivBack"/>


    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivAvatar"
        tools:text="Testing Test" />


        <LinearLayout
            android:id="@+id/view_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/viewFollower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvNumFollower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    tools:text="31" />

                <TextView
                    android:id="@+id/labelFollower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_followers"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <View
                android:id="@+id/separator"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_24"
                android:background="@color/white"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/viewFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNumFollowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    tools:text="31" />

                <TextView
                    android:id="@+id/labelFollowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_following"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/tvContact"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_50"
            android:background="@drawable/bg_color_accent"
            android:gravity="center"
            android:text="@string/label_contact_admin"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintTop_toBottomOf="@id/view_follow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvChangePswd"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/bg_transparent"
            android:gravity="center"
            android:text="@string/label_change_password"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvContact"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_40"
            android:gravity="center|bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_log_out"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=" / "
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tvDeactivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_deactivate"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

</android.support.constraint.ConstraintLayout>