<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".profile.activity.FollowingActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/dp_32"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:src="@drawable/ic_left_arrow" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/tag_your_friends"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/post_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_12"
                    android:gravity="center"
                    android:text="Post"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/green"
                    android:visibility="gone"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_32"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/viewSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/dp_12"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dp_16"
                        android:layout_height="@dimen/dp_16"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_search"
                        android:tint="@color/light_gray" />

                    <EditText
                        android:id="@+id/edtSearch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:layout_marginLeft="@dimen/dp_8"
                        android:hint="@string/label_search"
                        android:textColor="@color/white"
                        android:imeOptions="actionGo"
                        android:inputType="textPersonName|textNoSuggestions"
                        android:singleLine="true"
                        android:layout_gravity="center"
                        android:textColorHint="@color/light_gray"
                        android:textSize="@dimen/sp_12" />

                    <ImageView
                        android:id="@+id/ivClose"
                        android:layout_width="@dimen/dp_16"
                        android:layout_height="@dimen/dp_16"
                        android:src="@drawable/ic_close"
                        android:layout_gravity="center"
                        android:background="@drawable/circle"
                        android:visibility="gone"
                        android:layout_marginRight="@dimen/dp_12" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:text="@string/label_cancel"
                    android:textColor="@color/white"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_athletesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16" />

</LinearLayout>
